--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
 		"globals": "^16.0.0",
 		"jsdom": "^26.0.0",
 		"lucide-svelte": "^0.479.0",
+		"mode-watcher": "^0.5.1",
 		"postcss": "^8.5.3",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^0.3.28",
 		"sveltekit-superforms": "^2.23.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^0.3.1",
@@ -60,8 +62,8 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"@tanstack/table-core": "^8.21.2",
 		"drizzle-orm": "^0.40.0",
-		"mode-watcher": "^0.5.1",
 		"postgres": "^3.4.5",
 		"runed": "^0.23.4"
 	},
