--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"@types/node": "^22.13.10",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^1.3.6",
 		"clsx": "^2.1.1",
@@ -65,7 +66,8 @@
 		"@tanstack/table-core": "^8.21.2",
 		"drizzle-orm": "^0.40.0",
 		"postgres": "^3.4.5",
-		"runed": "^0.23.4"
+		"runed": "^0.23.4",
+		"sharp": "^0.33.5"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
