--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
 		"drizzle-orm": "^0.40.0",
 		"postgres": "^3.4.5",
 		"runed": "^0.23.4",
-		"sharp": "^0.33.5"
+		"sharp": "^0.33.5",
+		"simple-icons": "^14.11.1"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
